# schwarzchild-blackhole-render

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
math/: vec4.hpp
math/core/: tensor.hpp  vec4.hpp
math/relativity/: geodesic.hpp  relativity.hpp
renderer/: camera.hpp
tests/: CMakeLists.txt  test_relativity.cpp  test_vec4.cpp
